--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,56 +18,97 @@ body {
 }
 
 
-
 nav {
 	position: fixed;
 	width: 100%;
 	z-index: 10;
+	height: 75px;
+	transition: all 1s ease;
+	background: linear-gradient(to bottom, rgba(0,0,0,.2) 0%, rgba(0,0,0,.2) 70%, rgba(0,0,0,0) 100%);
 }
 
-nav.white {
-	background-color: white;
+nav a {
+	text-decoration: none;
+	color: white;
+	overflow: auto;
+	transition: all 1s ease;
 }
 
 nav > * > * {
 	margin: 10px;
 }
 
-nav menu {
-
+nav > * {
+	margin: auto 0;
 }
 
 nav img {
-	 height: 50px;
+	position: absolute;
+	height: 50px;
+	left: 0;
+	top: 0;
+	transition: all 1s ease;
+	margin: 10px;
 }
 
-nav a {
-	text-decoration: none;
+nav button {
+	background-color: transparent;
+	border-radius: 5px;
 	color: white;
+	border-color: white;
+	padding: 5px 10px;
+	border-style: solid;
+	transition: all 1s ease;
+	cursor: pointer;
+}
+
+nav button.boton-signup {
+	color: #FF00BF;
+	border-color: #FF00BF;
+	transform: translateX(200%);
+	transition: all 1s ease;
+}
+
+nav.white {
+	background: none;
+	background-color: white;
+	transition: all 1s ease;
+}
+
+nav.white img.white {
+	opacity: 0;
+	transition: all 1s ease;
+}
+
+nav:not(.white) img.pink {
+	opacity: 0;
+	transition: all 1s ease;
 }
 
 nav.white a {
 	color: #333447;
+	transition: all 1s ease;
 }
 
-.boton-login {
-	background-color: transparent;
-	color: white;
-	border-radius: 5px;
-	padding: 5px 10px;
-	border-style: solid;
-	border-color: white;
+nav.white button.boton-login {
+	color: #333447;
+	border-color: #333447;
+	transition: all 1s ease;
 }
 
-.boton-signup {
-	background-color: transparent;
-	color: #FF00BF;
-	border-radius: 5px;
-	padding: 5px 10px;
-	border-style: solid;
-	border-color: #FF00BF;
-
+nav.white button.boton-signup {
+	transform: translateX(0);
+	transition: all 1s ease;
 }
+
+
+
+
+
+
+
+
+
 
 .flex-container {
 	display: flex;
@@ -81,7 +122,6 @@ header {
 }
 
 header video {
-	background-color: #180f2d;
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
@@ -94,18 +134,17 @@ header video {
 	width: 40%;
 	margin-left: auto;
 	margin-top: 100px;
-	height: 400px;
-	background-color: green;
+	min-height: 400px;
+	background-color: white;
 	z-index: 2;
 }
-
 
 .info {
 	background: linear-gradient(to bottom, rgba(101,14,130,0) 0px, rgba(101,14,130,1) 100px, rgba(45,31,106,1) 100%);
 	margin-top: -100px;
 	padding-top: 100px;
 	z-index: 1;
-	position: absolute;
+	position: relative;
 	color: white;
 }
 
@@ -126,3 +165,43 @@ header video {
 	background-position: center;
 	background-repeat: no-repeat;
 }
+
+.amplify .flex-container, 
+.june .flex-container, 
+.goodthing .flex-container {
+	flex-direction: column;
+	width: 50%;
+	justify-content: flex-start;
+	margin: 100px;
+}
+
+.amplify h2, 
+.june h2, 
+.goodthing h2 {
+	margin-top: 10px;
+	margin-bottom: 30px;
+}
+
+.videocontainer {
+	position: relative;
+	margin: 100px;
+	width: 50%;
+}
+
+.aspectfix {
+	position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+
+.video1,
+.video2,
+.video3 {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
